Refactor `README.md` with comprehensive stack details, architecture overview, enhanced feature descriptions, updated deployment instructions, and additional sections (security, caching, i18n, UI patterns).